--- a/producao/pep/References.bib
+++ b/producao/pep/References.bib
@@ -146,3 +146,24 @@ year = {2007}
   year={2006},
   publisher={Springer}
 }
+
+@article{Ge2005,
+author = {Ge, Rong and Feng, Xizhou and Cameron, Kirk W.},
+doi = {10.1109/SC.2005.57},
+isbn = {1595930612},
+journal = {Proceedings of the ACM/IEEE 2005 Supercomputing Conference, SC'05},
+title = {{Performance-constrained distributed DVS scheduling for scientific applications on power-aware clusters}},
+volume = {2005},
+year = {2005}
+}
+
+@article{Poellabauer2005,
+author = {Poellabauer, Christian},
+doi = {10.1109/RTAS.2005.23},
+isbn = {0-7695-2302-1},
+journal = {In Proc. IEEE Real-Time and Embedded Technology and Applications Symposium},
+pages = {234--243},
+title = {{Feedback-Based Dynamic Voltage and Frequency Scaling for Memory-Bound Real-Time Applications}},
+url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.68.9967},
+year = {2005}
+}
