--- a/producao/pep/References.bib
+++ b/producao/pep/References.bib
@@ -167,3 +167,11 @@ title = {{Feedback-Based Dynamic Voltage and Frequency Scaling for Memory-Bound 
 url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.68.9967},
 year = {2005}
 }
+
+@article{Morowsppd,
+author = {Moro, Gabriel Bronzatti and Schnorr, Lucas Mello},
+pages = {2--4},
+title = {{Measuring Hardware Counters for HPC Application Phase Detection}},
+year = {2016},
+publisher={XIV Workshop de Processamento Paralelo e Distribuído}
+}
