Script do experimento

--- a/LabBook.org
+++ b/LabBook.org
@@ -4049,6 +4049,50 @@ The following object is masked from ‘package:base’:
  creating full factorial with 120 runs ...
 #+end_example
 
+- Script de execução:
+
+#+begin_src sh :results output :exports both :tangle scripts/exp4Script.bash
+#!bin/bash
+
+nameFile="../dados/exp5NAS_overhead/exp5NAS_overhead.csv"
+pathOfApps="/home/aulapinroot/NPB3.0/NPB3.0-OMP/bin"
+
+outputFile="../dados/exp5NAS_overhead/ResultExp5_overhead.csv"
+
+ref=$(cat $nameFile)
+
+tmp=""
+
+i=0
+
+for row in ${ref[@]}; do
+   if [ $i -gt 0 ]; then		
+	   name=$(echo "$row" | cut -d ',' -f1)
+	   runId=$(echo "$row" | cut -d ',' -f2)
+       runNumber=$(echo "$row" | cut -d ',' -f3)
+	   runStd=$(echo "$row" | cut -d ',' -f4)
+	   versions=$(echo "$row" | cut -d ',' -f5 | sed 's/"//g')
+	   threads=$(echo "$row" | cut -d ',' -f6 | sed 's/"//g')
+	   sampling=$(echo "$row" | cut -d ',' -f7 | sed 's/"//g')
+	   use=$(echo "$row" | cut -d ',' -f8 | sed 's/"//g')
+
+	   export OMP_NUM_THREADS=$threads
+
+	   if [ $user == "com" ]; then 
+		timeSeconds=$(sudo likwid-perfctr -t 100ms -f -c N:0-31 -g L2CACHE "$pathOfApps/$versions" | grep -i "Time in seconds" | sed 's/[[:space:]]//g' | sed 's/[a-zA-Z=]//g')
+	   else
+		timeSeconds=$("$pathOfApps/$versions" | grep -i "Time in seconds" | sed 's/[[:space:]]//g' | sed 's/[a-zA-Z=]//g')
+	   fi	   	
+
+	   echo "$name,$runId,$runNumber,$runStd,$versions,$threads,$sampling,$use,$timeSeconds" >> $outputFile
+	else
+		echo $row >> $outputFile
+		let i=$i+1
+	fi
+done
+
+#+end_src
+
 * TODO [11:25:11; 29.08.2016] Novo Experimento L2Cache e L3Cache na mesma Execução :Gabriel:
 - State "TODO"       from              [2016-08-31 Qua 14:01]
 ** Script do Experimento
